logs/offboard_pkg/build.make.586.log.stderr
In file included from /opt/ros/noetic/include/ros/ros.h:40,
                 from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.h:1,
                 from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:1:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp: In member function ‘bool TaskManager::is_enu_success(Eigen::Vector3d&, bool)’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:291:48: error: ‘geometry_msgs::PoseStamped’ {aka ‘struct geometry_msgs::PoseStamped_<std::allocator<void> >’} has no member named ‘x’
  291 |     ROS_INFO("pos %f, %f, %f, dis %f",tempPose.x(), tempPose.y(), tempPose.z(), distance_pos(tempPose, local_pose));
      |                                                ^
/opt/ros/noetic/include/ros/console.h:351:165: note: in definition of macro ‘ROSCONSOLE_PRINT_AT_LOCATION_WITH_FILTER’
  351 |     ::ros::console::print(filter, __rosconsole_define_location__loc.logger_, __rosconsole_define_location__loc.level_, __FILE__, __LINE__, __ROSCONSOLE_FUNCTION__, __VA_ARGS__)
      |                                                                                                                                                                     ^~~~~~~~~~~
/opt/ros/noetic/include/ros/console.h:390:7: note: in expansion of macro ‘ROSCONSOLE_PRINT_AT_LOCATION’
  390 |       ROSCONSOLE_PRINT_AT_LOCATION(__VA_ARGS__); \
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/ros/noetic/include/ros/console.h:575:35: note: in expansion of macro ‘ROS_LOG_COND’
  575 | #define ROS_LOG(level, name, ...) ROS_LOG_COND(true, level, name, __VA_ARGS__)
      |                                   ^~~~~~~~~~~~
/opt/ros/noetic/include/rosconsole/macros_generated.h:110:23: note: in expansion of macro ‘ROS_LOG’
  110 | #define ROS_INFO(...) ROS_LOG(::ros::console::levels::Info, ROSCONSOLE_DEFAULT_NAME, __VA_ARGS__)
      |                       ^~~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:291:5: note: in expansion of macro ‘ROS_INFO’
  291 |     ROS_INFO("pos %f, %f, %f, dis %f",tempPose.x(), tempPose.y(), tempPose.z(), distance_pos(tempPose, local_pose));
      |     ^~~~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:291:62: error: ‘geometry_msgs::PoseStamped’ {aka ‘struct geometry_msgs::PoseStamped_<std::allocator<void> >’} has no member named ‘y’
  291 |     ROS_INFO("pos %f, %f, %f, dis %f",tempPose.x(), tempPose.y(), tempPose.z(), distance_pos(tempPose, local_pose));
      |                                                              ^
/opt/ros/noetic/include/ros/console.h:351:165: note: in definition of macro ‘ROSCONSOLE_PRINT_AT_LOCATION_WITH_FILTER’
  351 |     ::ros::console::print(filter, __rosconsole_define_location__loc.logger_, __rosconsole_define_location__loc.level_, __FILE__, __LINE__, __ROSCONSOLE_FUNCTION__, __VA_ARGS__)
      |                                                                                                                                                                     ^~~~~~~~~~~
/opt/ros/noetic/include/ros/console.h:390:7: note: in expansion of macro ‘ROSCONSOLE_PRINT_AT_LOCATION’
  390 |       ROSCONSOLE_PRINT_AT_LOCATION(__VA_ARGS__); \
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/ros/noetic/include/ros/console.h:575:35: note: in expansion of macro ‘ROS_LOG_COND’
  575 | #define ROS_LOG(level, name, ...) ROS_LOG_COND(true, level, name, __VA_ARGS__)
      |                                   ^~~~~~~~~~~~
/opt/ros/noetic/include/rosconsole/macros_generated.h:110:23: note: in expansion of macro ‘ROS_LOG’
  110 | #define ROS_INFO(...) ROS_LOG(::ros::console::levels::Info, ROSCONSOLE_DEFAULT_NAME, __VA_ARGS__)
      |                       ^~~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:291:5: note: in expansion of macro ‘ROS_INFO’
  291 |     ROS_INFO("pos %f, %f, %f, dis %f",tempPose.x(), tempPose.y(), tempPose.z(), distance_pos(tempPose, local_pose));
      |     ^~~~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:291:76: error: ‘geometry_msgs::PoseStamped’ {aka ‘struct geometry_msgs::PoseStamped_<std::allocator<void> >’} has no member named ‘z’
  291 |     ROS_INFO("pos %f, %f, %f, dis %f",tempPose.x(), tempPose.y(), tempPose.z(), distance_pos(tempPose, local_pose));
      |                                                                            ^
/opt/ros/noetic/include/ros/console.h:351:165: note: in definition of macro ‘ROSCONSOLE_PRINT_AT_LOCATION_WITH_FILTER’
  351 |     ::ros::console::print(filter, __rosconsole_define_location__loc.logger_, __rosconsole_define_location__loc.level_, __FILE__, __LINE__, __ROSCONSOLE_FUNCTION__, __VA_ARGS__)
      |                                                                                                                                                                     ^~~~~~~~~~~
/opt/ros/noetic/include/ros/console.h:390:7: note: in expansion of macro ‘ROSCONSOLE_PRINT_AT_LOCATION’
  390 |       ROSCONSOLE_PRINT_AT_LOCATION(__VA_ARGS__); \
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/ros/noetic/include/ros/console.h:575:35: note: in expansion of macro ‘ROS_LOG_COND’
  575 | #define ROS_LOG(level, name, ...) ROS_LOG_COND(true, level, name, __VA_ARGS__)
      |                                   ^~~~~~~~~~~~
/opt/ros/noetic/include/rosconsole/macros_generated.h:110:23: note: in expansion of macro ‘ROS_LOG’
  110 | #define ROS_INFO(...) ROS_LOG(::ros::console::levels::Info, ROSCONSOLE_DEFAULT_NAME, __VA_ARGS__)
      |                       ^~~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:291:5: note: in expansion of macro ‘ROS_INFO’
  291 |     ROS_INFO("pos %f, %f, %f, dis %f",tempPose.x(), tempPose.y(), tempPose.z(), distance_pos(tempPose, local_pose));
      |     ^~~~~~~~
make[2]: *** [CMakeFiles/offboard_pkg_node.dir/build.make:76: CMakeFiles/offboard_pkg_node.dir/src/TaskManager.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:335: CMakeFiles/offboard_pkg_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
